2009-11-03  Corey Minyard <minyard@acm.org>

	* configure.in: Move version to 2.7 for release.
	
2009-10-23  Corey Minyard <minyard@acm.org>

	* configure.in: Move to 2.7-rc3.

	* dataxfer.c, devcfg.c, devcfg.h, ser2net.h: Modified the tb=
	directive to work separately from tw= and tr=, so you can do all
	three at the same time independently.

	* readconfig.c: Improved an error report.
	
2009-10-22  Corey Minyard <minyard@acm.org>

	* ser2net.c: Set up routing errors to stderr before reading the
	config so config errors come out properly to stdout.

	* ser2net.8, ser2net.conf: Fix the documentation, it's tw=, not
	tw: for the tracefile stuff.

	* configure.in: Move to 2.7-rc2.

2009-10-15  Corey Minyard <minyard@acm.org>

	* dataxfer.c, devcfg.c, readconfig.c, ser2net.8, ser2net.conf: Add
	the ability to trace data read written to trace files.

2009-07-19  Geoff Simmons <gsimmons@gsimmons.org>

	* ser2net.conf: Some documentation cleanup, added missing docs
	for the timeout parameter.

	* README - Minor doc cleanup.
	
2009-07-15  Corey Minyard <minyard@acm.org>

	* configure.in: Move to version 2.6.
	
2009-06-30  Corey Minyard <minyard@acm.org>

	* dataxfer.c, devcfg.c, devcfg.h, readconfig.h, utils.h: Add the
	a TRACEFILE option to trace all I/O to a file., and separate
	out the defconfig into a separate structure to avoid passing a
	boatload of things to the config.
	
2009-06-30  Sebastian Andrzej Siewior <bigeasy@linutronix.de>

	* controller.c: Fix use after free in controller

          The controller will use its dynamically allocated data after it
	  got free() in error path. What we see in syslog is:

          Jun 30 10:26:38 consrv3 ser2net[3073]: read error for
		controller port: Connection reset by peer
          Jun 30 10:26:39 consrv3 ser2net[3073]: The tcp write for
		controller had error: Bad file descriptor

          The first error is "legal" because the destitnation decided to
	  close its socket a little to early than expected. The second